<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:layout_marginTop="?android:attr/actionBarSize">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:padding="@dimen/padding">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/icon_user"
                android:drawablePadding="@dimen/padding"
                android:paddingBottom="@dimen/padding"
                android:inputType="text"
                android:maxLength="20"
                android:hint="@string/hint_name"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_layout_name">
            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/icon_mail"
                android:drawablePadding="@dimen/padding"
                android:paddingBottom="@dimen/padding"
                android:inputType="text"
                android:singleLine="true"
                android:hint="@string/hint_email"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_layout_email">
            <EditText
                android:id="@+id/et_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/icon_mobile"
                android:drawablePadding="@dimen/padding"
                android:paddingBottom="@dimen/padding"
                android:maxLength="10"
                android:inputType="number"
                android:hint="@string/hint_mobile"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_layout_mobile">
            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/icon_password"
                android:drawablePadding="@dimen/padding"
                android:paddingBottom="@dimen/padding"
                android:inputType="numberPassword"
                android:maxLength="10"
                android:hint="@string/hint_password"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/bt_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/padding"
            android:layout_below="@+id/input_layout_password"
            android:text="@string/bt_signup"
            android:background="@drawable/selector"/>
        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_height"
            android:layout_below="@+id/bt_signup"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true">
            <TextView
                android:id="@+id/tv_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_bottom"
                />
            <TextView
                android:id="@+id/tv_signin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/click_signin"
                android:textColor="@color/colorAccent"/>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>
