<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollView"
        android:fillViewport="true"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
    android:layout_marginTop="?attr/actionBarSize">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/padding"
            android:focusable="true"
            android:focusableInTouchMode="true">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/icon_mail"
                    android:drawablePadding="@dimen/padding"
                    android:paddingBottom="@dimen/padding"
                    android:inputType="text"
                    android:singleLine="true"
                    android:hint="@string/hint_email" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/input_layout_mobile">
                <EditText
                    android:id="@+id/login_password"
                    android:drawableLeft="@drawable/icon_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/padding"
                    android:layout_marginBottom="@dimen/padding"
                    android:drawablePadding="@dimen/padding"
                    android:inputType="numberPassword"
                    android:maxLength="10"
                    android:hint="@string/hint_password"/>
            </android.support.design.widget.TextInputLayout>
            <Button
                android:id="@+id/bt_signin"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bt_signin"
                android:layout_below="@+id/input_layout_password"
                android:background="@drawable/selector" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_alignParentBottom="true">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingRight="@dimen/text_padding"
                    android:text="@string/bottom_text_signin"/>
                <TextView
                    android:id="@+id/tv_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bt_signup"
                    android:textColor="@color/colorAccent"/>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

