<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_marginTop="?android:attr/actionBarSize">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:padding="@dimen/padding">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/et_customer_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/icon_user"
                    android:drawablePadding="@dimen/padding"
                    android:paddingBottom="@dimen/padding"
                    android:inputType="text"
                    android:maxLength="20"
                    android:hint="@string/hint_name"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/input_layout_name">
                <EditText
                    android:id="@+id/et_customer_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/icon_mail"
                    android:drawablePadding="@dimen/padding"
                    android:paddingBottom="@dimen/padding"
                    android:inputType="text"
                    android:singleLine="true"
                    android:hint="@string/hint_email"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/input_layout_email">
                <EditText
                    android:id="@+id/et_customer_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/icon_mobile"
                    android:drawablePadding="@dimen/padding"
                    android:paddingBottom="@dimen/padding"
                    android:maxLength="10"
                    android:inputType="number"
                    android:hint="@string/hint_mobile"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/input_layout_mobile">
                <EditText
                    android:id="@+id/et_customer_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/padding"
                    android:drawableLeft="@drawable/ic_home_black_24dp"
                    android:drawablePadding="@dimen/padding"
                    android:inputType="text"
                    android:maxLength="25"
                    android:hint="@string/address"/>
            </android.support.design.widget.TextInputLayout>
            <!--<android.support.design.widget.TextInputLayout-->
                <!--android:id="@+id/input_layout_image"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_below="@+id/input_layout_address">-->
                <!--<EditText-->
                    <!--android:id="@+id/et_customer_image"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:paddingBottom="@dimen/padding"-->
                    <!--android:drawablePadding="@dimen/padding"-->
                    <!--android:inputType="text"-->
                    <!--android:maxLength="20"-->
                    <!--android:hint="@string/image_url"/>-->
            <!--</android.support.design.widget.TextInputLayout>-->

            <Button
                android:id="@+id/bt_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/padding"
                android:layout_below="@+id/input_layout_address"
                android:text="@string/string_add"
                android:background="@drawable/selector"/>

        </RelativeLayout>
    </ScrollView>


